syntax = "proto3";

package bilibili.broadcast.v1;

/**
 * 心跳请求  
 * 心跳保活：成功心跳为4分45秒，重试心跳为30s，三次收不到进行重连（不超过5分45）
 */
message HeartbeatReq{}

/** 心跳返回 */
message HeartbeatResp{}